tests/snapshots/snapshot_tests__pages__minimal_page.snap
---
source: tests/snapshot_tests.rs
expression: "compose_page_markdown(&page, &RenderContext::default()).unwrap()"
---
# My Page

## Properties


## Metadata

- **Page ID**: 00000000000000000000000000000002
- **URL**: https://www.notion.so/00000000-0000-0000-0000-000000000002
